@@ -96,6 +96,7 @@
     <li><a href="./progbe_ig.html">ignore</a> - Always ignore existing files</li>
     <li><a href="./progbe_lang.html">language</a> - Set language of messages</li>
     <li><a href="./progbe_log.html">logfile</a> - Set up log file name</li>
+    <li><a href="./progbe_Nthreads.html">Nthreads</a> - Set number of OpenMP threads</li>
     <li><a href="./progbe_ow.html">overwrite</a> - Always overwrite existing files</li>
     <li><a href="./progbe_verb.html">verbosity</a> - Set verbosity level</li>
   </ul></li>
