@@ -43,6 +43,9 @@ ASE provides Python modules for manipulating atoms, analyzing simulations, visua
 <li><p><a href="http://avogadro.cc/">Avogadro</a><br/>
 Avogadro is an advanced molecule editor and visualizer designed for cross-platform use in computational chemistry, molecular modeling, bioinformatics, materials science, and related areas.</p></li>
 
+<li><p><a href="http://emmanuel.clouet.free.fr/Programs/Babel/">Babel</a><br/>
+A Fortran program to insert dislocation in atomistic simulations, calculate their elastic energy, extract the Nye tensors, and much more...</p></li>
+
 <li><p><a href="http://www.moltemplate.org/">Moltemplate</a><br/>
 Moltemplate is a cross-platform text-based molecule builder for LAMMPS. It is typically used for building coarse-grained toy molecular models.</p></li>
 
