@@ -30,9 +30,15 @@
 
 <ul>
   <li><strong>format &#60;format&#62;</strong>: indicates a format that Atomsk must always activate for output; several formats can be indicated by using this keyword several times (one line per keyword);</li>
-  <li><strong>overw &#60;value&#62;</strong>: if &#60;value&#62; is YES then existing files are always overwritten, otherwise Atomsk will ask; identical to the command-line option <a href="./progbe_ow.html"><code>-overw</code></a>;</li>
+  
   <li><strong>ignore &#60;value&#62;</strong>: if &#60;value&#62; is YES then conversion is skipped if output files already exist, otherwise Atomsk will ask; identical to the command-line option <a href="./progbe_ig.html"><code>-ignore</code></a>;</li>
+  
+  <li><strong>overw &#60;value&#62;</strong>: if &#60;value&#62; is YES then existing files are always overwritten, otherwise Atomsk will ask; identical to the command-line option <a href="./progbe_ow.html"><code>-overw</code></a>;</li>
+  
+  <li><strong>Nthreads &#60;n&#62;</strong>: limits the maximum of OpenMP threads used by Atomsk to &#60;n&#62;; identical to the command-line option <a href="./progbe_Nthreads.html"><code>-Nthreads</code></a>;</li>
+  
   <li><strong>verbosity &#60;n&#62;</strong>: set the verbosity level to &#60;n&#62; ; identical to the command-line option <a href="./progbe_verb.html"><code>-verbosity</code></a>;</li>
+  
   <li><strong>lang &#60;language&#62;</strong>: set the language of the program to &#60;language&#62; ; identical to the command-line option <a href="./progbe_lang.html"><code>-lang</code></a>;</li>
 </ul>
 
