@@ -43,6 +43,9 @@ ASE fournit des modules Python pour manipuler des atomes, analyser des simulatio
 <li><p><a href="http://avogadro.cc/">Avogadro</a><br/>
 Avogadro est un outil avancé d'édition et de visualisation de molécules, multi-plateformes et conçu pour être utilisé en chimie, modélisation moléculaire, bio-informatique, science des matériaux, et thématiques associées.</p></li>
 
+<li><p><a href="http://emmanuel.clouet.free.fr/Programs/Babel/">Babel</a><br/>
+Un programme Fortran pour insérer des dislocations pour des simulations à l'échelle atomique, calculer leur énergie, extraire leur tenseur de Nye, et bien plus encore...</p></li>
+
 <li><p><a href="http://www.moltemplate.org/">Moltemplate</a><br/>
 Moltemplate est un constructeur moléculaire en mode texte multi-plateformes pour LAMMPS. Il est typiquement utilisé pour construire des modèles moléculaires ou granulaires.</p></li>
 
