@@ -30,9 +30,15 @@
 
 <ul>
   <li><strong>format &#60;format&#62;</strong> : indique un format pour lequel <code>atomsk</code> doit toujours créer un fichier de sortie ; plusieurs formats peuvent être indiqués en utilisant ce mot-clé plusieurs fois (un par ligne).</li>
+  
   <li><strong>overw &#60;valeur&#62;</strong> : si &#60;valeur&#62; vaut "YES" alors les fichiers de sortie sont toujours écrasés sans demander à l'utilisateur, sinon <code>atomsk</code> demande avant d'écraser un fichier ; identique à l'option <a href="./progbe_ow.html"><code>-overw</code></a>.</li>
+  
   <li><strong>ignore &#60;valeur&#62;</strong> : si &#60;valeur&#62; vaut "YES" alors les fichiers de sortie qui existent déjà ne sont pas réécrits, sinon <code>atomsk</code> demande ; identique à l'option <a href="./progbe_ig.html"><code>-ignore</code></a>.</li>
+  
+  <li><strong>Nthreads &#60;n&#62;</strong> : limite à &#60;n&#62; le nombre maximum de processus OpenMP utilisés par Atomsk&nbsp;; identique à l'option <a href="./progbe_Nthreads.html"><code>-Nthreads</code></a>;</li>
+  
   <li><strong>verbosity &#60;n&#62;</strong> : paramètre le niveau de verbosité à &#60;n&#62; ; identique à l'option <a href="./progbe_verb.html"><code>-verbosity</code></a>.</li>
+  
   <li><strong>lang &#60;langue&#62;</strong> : affiche les messages dans la &#60;langue&#62; donnée ; identique à l'option <a href="./progbe_lang.html"><code>-lang</code></a>;</li>
 </ul>
 
