@@ -21,6 +21,7 @@
     <li><a href="./progbe_ig.html">ignore</a> - Toujours ignorer les fichiers existants</li>
     <li><a href="./progbe_lang.html">language</a> - Changer la langue des messages</li>
     <li><a href="./progbe_log.html">logfile</a> - Changer le nom du fichier journal</li>
+    <li><a href="./progbe_Nthreads.html">Nthreads</a> - Définir le nombre de processus OpenMP</li>
     <li><a href="./progbe_ow.html">overwrite</a> - Toujours écraser les fichiers existants</li>
     <li><a href="./progbe_verb.html">verbosity</a> - Changer le niveau de verbosité</li>
 </ul>
